# DatalogMTL-MagicSet-Transformer

./: .gitignore  CMakeLists.txt  DatalogMTL-MagicSet-Transformer.sln  README.md  main.cpp
DatalogMTL-MagicSet-Transformer/: ClassDiagram.cd  DatalogMTL-MagicSet-Transformer.vcxproj  DatalogMTL-MagicSet-Transformer.vcxproj.filters  main.cpp
DatalogMTL-MagicSet-Transformer/classes/: atom.h  literal.h
DatalogMTL-MagicSet-Transformer/lib/: term.cpp
DatalogMTL-MagicSet-Transformer/utils/: magic.h
classes/: atom.h  literal.h  rule.h  term.h
experiment/2024.7/: README.md  compute_CR_and_query.py  generate_CR_and_store.py  load_CR_and_auto_query.py
lib/: atom.cpp  interval.cpp  literal.cpp  term.cpp
test/: inst.txt
test/input/: T1.txt  T2.txt  T3.txt  T5.txt  iTemporal_g4859.txt  iTemporal_g4860.txt  iTemporal_g4862.txt  iTemporal_g4863.txt  iTemporal_g4864.txt  iTemporal_g4866.txt  iTemporal_g4867.txt  iTemporal_g4869.txt  iTemporal_g4901.txt  iTemporal_program.txt  input.txt  lubm_AssistantProfessorCandidate.txt  lubm_AssociateProfessor.txt  lubm_AssociateProfessorCandidate.txt  lubm_Chair.txt  lubm_Course.txt  lubm_Employee.txt  lubm_Faculty.txt  lubm_FullProfessor.txt  lubm_FullProfessorCandidate.txt  lubm_GoodDepartment.txt  lubm_Lecturer.txt  lubm_LecturerCandidate.txt  lubm_Organization.txt  lubm_Person.txt  lubm_Professor.txt  lubm_Publication.txt  lubm_ResearchAssistant.txt  lubm_ResearchAssistantCandidate.txt  lubm_Scientist.txt  lubm_ScientistCandidate.txt  lubm_SmartStudent.txt  lubm_Student.txt  lubm_University.txt  (+8 more)
utils/: loader.h  magic.h  parser.h
(+69 files in other folders)
